--- a/AGDPMS.Shared/Components/Routes.razor
+++ b/AGDPMS.Shared/Components/Routes.razor
@@ -1,5 +1,16 @@
-﻿<Router AppAssembly="typeof(Routes).Assembly">
+﻿@using Microsoft.AspNetCore.Authorization
+@using AGDPMS.Shared.Components.Layout
+@attribute [Authorize]
+
+<Router AppAssembly="typeof(AGDPMS.Shared.Components._Imports).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="routeData" />
+        <RouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)" />
+        <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
+    <NotFound>
+        <PageTitle>Not found</PageTitle>
+        <LayoutView Layout="typeof(MainLayout)">
+            <p role="alert">Sorry, there's nothing at this address.</p>
+        </LayoutView>
+    </NotFound>
 </Router>
