--- a/AGDPMS.Shared/Components/Layout/MainLayout.razor
+++ b/AGDPMS.Shared/Components/Layout/MainLayout.razor
@@ -22,7 +22,7 @@
             <li class="nav-item">
                 <NavLink href="/projects" class="nav-link text-white"><i class="bi bi-list-task me-2"></i>Projects</NavLink>
             </li>
-            <AuthorizeView Roles="Admin,QA,ProductionManager">
+            <AuthorizeView Roles="Director,Qa,Production Manager">
                 <li class="nav-item">
                     <NavLink href="/production/orders" class="nav-link text-white"><i class="bi bi-gear me-2"></i>Production Orders</NavLink>
                 </li>
@@ -56,7 +56,7 @@
         <li class="nav-item">
             <NavLink href="/projects" class="nav-link text-white"><i class="bi bi-list-task me-2"></i><span>Projects</span></NavLink>
         </li>
-        <AuthorizeView Roles="Admin,QA,ProductionManager">
+        <AuthorizeView Roles="Director,Qa,Production Manager">
             <li class="nav-item">
                 <NavLink href="/production/orders" class="nav-link text-white"><i class="bi bi-gear me-2"></i><span>Production Orders</span></NavLink>
             </li>
