--- a/AGDPMS.Shared/Components/Projects/CavityDetails.razor
+++ b/AGDPMS.Shared/Components/Projects/CavityDetails.razor
@@ -129,7 +129,7 @@
                                 {
                                     <tr>
                                         <td>@bom.Material.Name</td>
-                                        <td>@bom.Material.Id</td>
+                                        <td>@bom.Material.Code</td>
                                         <td>@bom.Length</td>
                                         <td>@bom.Quantity</td>
                                         <td>mm</td>
@@ -166,7 +166,7 @@
                                 {
                                     <tr>
                                         <td>@bom.Material.Name</td>
-                                        <td>@bom.Material.Id</td>
+                                        <td>@bom.Material.Code</td>
                                         <td>@bom.Quantity</td>
                                         <td>@bom.Unit</td>
                                         <td>@bom.Color</td>
@@ -204,7 +204,7 @@
                                 {
                                     <tr>
                                         <td>@bom.Material.Name</td>
-                                        <td>@bom.Material.Id</td>
+                                        <td>@bom.Material.Code</td>
                                         <td>@bom.Length</td>
                                         <td>@bom.Width</td>
                                         <td>@bom.Quantity</td>
@@ -243,7 +243,7 @@
                                 {
                                     <tr>
                                         <td>@bom.Material.Name</td>
-                                        <td>@bom.Material.Id</td>
+                                        <td>@bom.Material.Code</td>
                                         <td>@bom.Length</td>
                                         <td>@bom.Quantity</td>
                                         <td>@bom.Unit</td>
@@ -280,7 +280,7 @@
                                 {
                                     <tr>
                                         <td>@bom.Material.Name</td>
-                                        <td>@bom.Material.Id</td>
+                                        <td>@bom.Material.Code</td>
                                         <td>@bom.Quantity</td>
                                         <td>@bom.Unit</td>
                                         <td>@bom.Color</td>
